# whisper-api

./: pyproject.toml  run.sh
examples/: transcribe_example.py
whisper_api/: app.py  middleware.py
whisper_api/api/: router.py  schemas.py
whisper_api/transcription/: schemas.py  transcribe.py  utils.py
