[tool.poetry]
name = "whisper-api"
version = "0.1.0"
description = ""
authors = ["Chasesc <schelthoff.chase@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai-whisper = {git = "https://github.com/openai/whisper.git", rev = "e58f28804528831904c3b6f2c0e473f346223433"}
fastapi = "0.110.0"
uvicorn = {extras = ["standard"], version = "^0.28.0"}
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
